--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tuna Tore</title>
 </head>
 <body>
-Welcome
+Welcome everyone.
 </body>
 </html>
